# llama-index-spanner-python

./: .coveragerc  .env.template  .gitignore  .repo-metadata.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  README.md  integration.cloudbuild.yaml  noxfile.py  pyproject.toml  requirements.txt
.ci/: blunderbuss.yml  integration.cloudbuild.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  blunderbuss.yml  header-checker-lint.yml  release-please.yml  renovate.json5  snippet-bot.yml  sync-repo-settings.yaml  trusted-contribution.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  lint.yml  lint_fallback.yml
docs/: changelog.md  conf.py  graph_retriever.ipynb  index.rst  property_graph_store.ipynb
docs/_static/: custom.css
src/llama_index_spanner/: __init__.py  graph_retriever.py  graph_utils.py  prompts.py  property_graph_store.py  schema.py  spanner.py  type_utils.py  version.py
tests/: test_e2e_rag.py  test_graph_retriever.py  test_spanner_property_graph_store.py  test_whole_flow.py  utils.py
