[project]
name = "llama-index-spanner"
dynamic = ["version"]
description = "LlamaIndex integrations for Google Cloud Spanner"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
google-cloud-spanner = ">=3.41.0,<4.0.0"
llama-index-core = "^0.12.41"
pytest = { version = "8.3.3", optional = true }
pytest-xdist = { version = "^3.6.1", optional = true }
pytest-cov = { version = "^5.0.0", optional = true }
pytest-asyncio = { version = "^0.24.0", optional = true }
black = { version = "^25.1.0", optional = true, extras = ["jupyter"] }
isort = { version = "^6.0.1", optional = true }
mypy = { version = "^1.16.0", optional = true }
llama-index-readers-wikipedia = { version = "^0.3.0", optional = true }
llama-index-embeddings-google-genai = { version = "^0.1.0", optional = true }
llama-index-llms-google-genai = { version = "^0.1.4", optional = true }
wikipedia = { version = "^1.4.0", optional = true }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[tool.poetry.group.dev.dependencies]
llama-index = "^0.12.22"
pyvis = "^0.3.2"
llama-index-llms-google-genai = "^0.1.4"
llama-index-readers-wikipedia = "^0.3.0"
wikipedia = "^1.4.0"
llama-index-embeddings-google-genai = "^0.1.0"
ipykernel = "^6.29.5"
black = {extras = ["jupyter"], version = "^25.1.0"}
isort = "^6.0.1"
mypy = "^1.16.0"

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"
pytest-xdist = "^3.6.1"
pytest-cov= "^5.0.0"
pytest-asyncio= "^0.24.0"
wikipedia="^1.4.0"

[tool.poetry.extras]
test = [
  "pytest", 
  "pytest-xdist", 
  "pytest-cov",
  "pytest-asyncio",
  "llama-index-readers-wikipedia",
  "llama-index-embeddings-google-genai",
  "llama-index-llms-google-genai",
  "ipykernel",
  "black",
  "isort",
  "mypy",
  "wikipedia"
]

[project.urls]
Homepage = "https://github.com/googleapis/llama-index-spanner-python"
Repository = "https://github.com/googleapis/llama-index-spanner-python.git"
"Bug Tracker" = "https://github.com/googleapis/llama-index-spanner-python/issues"
Changelog = "https://github.com/googleapis/llama-index-spanner-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
lint = [
    "black[jupyter]==24.8.0",
    "flake8==6.1.0",
    "isort==5.13.2",
]

[tool.setuptools.dynamic]
version = {attr = "llama-index-spanner.version.__version__"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
warn_unused_configs = true
ignore_missing_imports = true


[tool.mypy]
python_version = 3.9
warn_unused_configs = true

exclude = [
    'docs/*',
    'noxfile.py'
]